# invoice-pilot

./: .env.example  Dockerfile  README.md  calculator.py  db.py  docker-compose.yml  email_sender.py  mcp_server.py  pdf_gen.py  pyproject.toml  reminders.py  requirements.txt  server.py
mcp_server_invoicepilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: invoice_email.html  payment_page.html  reminder_final.html  reminder_firm.html  reminder_friendly.html
