[project]
name = "mcp-server-invoicepilot"
version = "1.0.0"
description = "Smart invoicing MCP server with auto-chase payment reminders"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mcp[cli]>=1.3.0",
    "reportlab>=4.2",
    "jinja2>=3.1.4",
    "apscheduler>=3.10.4",
    "pydantic>=2.10.0",
]

[project.scripts]
invoicepilot-mcp = "mcp_server:mcp.run"
invoicepilot-api = "server:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_server", "server", "calculator", "db", "email_sender", "pdf_gen", "reminders"]
